Updated creating and editing rubrics

--- a/website/templates/admin/edit_rubric.html
+++ b/website/templates/admin/edit_rubric.html
@@ -1,105 +1,171 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block content %}
-    <div id="overlay">
-        <div id="text">
-            
-            <div id='close_button' onclick="off()">
-                <a href='/rubrics/'>
-                    <img src="{{ url_for('static', filename='close.png') }}">
-                </a>
+    <style>
+        #text {
+            width: 500px;
+        }
+
+        textarea {
+            height: 30px;
+            width: 100%;
+            transition: all 0.5s ease;
+        }
+
+        textarea:focus {
+            height: 5em;
+        }
+
+        #desc, #category {
+            width: 100%;
+        }
+    </style>
+
+    <bod onload='check()' id='bodybody'>
+        <div id="overlay">
+            <div id="text">
                 
-            </div>
-
-            <div style='overflow-y: scroll; height: 80vh;'>
+                <div id='close_button' onclick="off()">
+                    <a href='/rubrics/'>
+                        <img src="{{ url_for('static', filename='close.png') }}">
+                    </a>
+                    
+                </div>
                 <p>Edit Rubric</p>
-                <form method='POST'>
-                    <label for="rubricCode">Rubric Code:</label>
-                    <input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
 
-                    <label for="desc">Description</label>
-                    <input type='text' id='desc' name='desc' value="{{ to_edit.desc }}"><br>
+                <div style='overflow-y: scroll; height: 80vh;'>
 
+                    <form method='POST' autocomplete='off'>
+                        <label for="rubricCode">Rubric Code:</label>
+                        <input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
 
-                    <label for='rate5'>Rate 5</label>
-                    <textarea id='rate5' name='rate5'>{{ to_edit.rate5 }}</textarea>
-                    <br>
+                        <input type='hidden' value='{{ to_edit.rubric_type }}' id='hidden_type'>
 
-                    <label for='rate4'>Rate 4</label>
-                    <textarea id='rate4' name='rate4'>{{ to_edit.rate4 }}</textarea>
-                    <br>
+                        <label for="rubType">Rubric Type:</label>
+                        <input onclick="check()" type="radio" id="group" name="rubType" value="Group">
+                        <label for="group">Group</label>
+                        <input onclick="check()" type="radio" id="individual" name="rubType" value="Individual">
+                        <label for="individual">Individual</label>
+                        <br>
 
-                    <label for='rate3'>Rate 3</label>
-                    <textarea id='rate3' name='rate3'>{{ to_edit.rate3 }}</textarea>
-                    <br>
+                        <label for="pblLvl">PBL Level:</label>
+                        {% for x in range(1, 5) %}
+                        {% set temp = to_edit.pbl_lvl[3] | int %}
+                        <input type="radio" id="pbl{{ x }}" name="pblLvl" value="PBL{{ x }}" {% if temp == x %}checked {% endif %}>
+                        <label for="pbl{{ x }}">PBL{{ x }}</label>
+                        {% endfor %}
+                        <br>
+                        
+                        <label for="category">Category:</label>
+                        <input type='text' id='category' name='category' style='text-align: left;' required value='{{ to_edit.category }}'><br>
 
+                        <label for="desc">Description:</label>
+                        <input type='text' id='desc' name='desc' style='text-align: left;' value='{{ to_edit.desc }}' required><br>
 
-                    <label for='rate2'>Rate 2</label>
-                    <textarea id='rate2' name='rate2'>{{ to_edit.rate2 }}</textarea>
-                    <br>
+                        <label for='rate5'>Rate 5:</label>
+                        <textarea id='rate5' name='rate5' required>{{ to_edit.rate5 }}</textarea>
+                        <br>
 
-                    <label for='rate1'>Rate 1</label>
-                    <textarea id='rate1' name='rate1'>{{ to_edit.rate1 }}</textarea>
-                    <br>
+                        <label for='rate4'>Rate 4:</label>
+                        <textarea id='rate4' name='rate4' required>{{ to_edit.rate4 }}</textarea>
+                        <br>
 
-                    <label for="weight">Weight</label>
-                    <input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value=0 onkeydown='return false;'>
-                    <br>
+                        <label for='rate3'>Rate 3:</label>
+                        <textarea id='rate3' name='rate3' required>{{ to_edit.rate3 }}</textarea>
+                        <br>
 
-                    <label for="rubType">Rubric Type</label>
-                    <select name="rubType" id='rubType'>
-                        <option value='Individual'>Individual</option>
-                        <option value='Group'>Group</option>
-                    </select>
-                    <br>
+                        <label for='rate2'>Rate 2:</label>
+                        <textarea id='rate2' name='rate2' required>{{ to_edit.rate2 }}</textarea>
+                        <br>
 
-                    <label for="pblLvl">PBL Level</label>
-                    <select name="pblLvl" id='pblLvl'>
-                        <option value='PBL1'>PBL1</option>
-                        <option value='PBL2'>PBL2</option>
-                        <option value='PBL3'>PBL3</option>
-                        <option value='PBL4'>PBL4</option>
-                    </select>
-                    <br>
+                        <label for='rate1'>Rate 1:</label>
+                        <textarea id='rate1' name='rate1' required>{{ to_edit.rate1 }}</textarea>
+                        <br>
+
+                        <label for="weight">Weight</label>
+                        <input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value='{{ to_edit.weight }}' onkeydown='return false;'>
+                        <br>
+                        
+                        <button type='submit' id='submit' name='submit'>Submit</button>
+                    </form>
+
 
                     
-                    <button type='submit' id='submit' name='submit'>Submit</button>
-                </form>
-                
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div class='create_button'>
-        <button>Create New Rubric</button>
-    </div>
+        <div class='create_button'>
+            <button>Create New Rubric</button>
+        </div>
 
-    <div class='display_grid'>
-        {% if rubrics %}
-            {% for rubric in rubrics %}
-                <div class='box'>
-                    <p>ID: {{ rubric.id }}</p>
-                    <p>Description: {{ rubric.desc }}</p>
-                    <p>Rate 5: {{ rubric.rate5 }}</p>
-                    <p>Rate 4: {{ rubric.rate4 }}</p>
-                    <p>Rate 3: {{ rubric.rate3 }}</p>
-                    <p>Rate 2: {{ rubric.rate2 }}</p>
-                    <p>Rate 1: {{ rubric.rate1 }}</p>
-                    <p>Weight: x{{ rubric.weight }}</p>
-                    <p>Rubric Type: {{ rubric.rubric_type }}</p>
-                    <p>PBL Level: {{ rubric.pbl_lvl }}</p>
-                    <br>
-                    <a href="">
-                        <button>Edit</button>
-                    </a>
-                    <a href="">
-                        <button>Delete</button>
-                    </a>
-                </div>
-                
-            {% endfor %}
-        {% endif %}
-    </div>
+        <div class='display_grid'>
+            {% if rubrics %}
+                {% for rubric in rubrics %}
+                    <div class='box'>
+                        <p>ID: {{ rubric.id }}</p>
+                        <p>Description: {{ rubric.desc }}</p>
+                        <p>Rate 5: {{ rubric.rate5 }}</p>
+                        <p>Rate 4: {{ rubric.rate4 }}</p>
+                        <p>Rate 3: {{ rubric.rate3 }}</p>
+                        <p>Rate 2: {{ rubric.rate2 }}</p>
+                        <p>Rate 1: {{ rubric.rate1 }}</p>
+                        <p>Weight: x{{ rubric.weight }}</p>
+                        <p>Rubric Type: {{ rubric.rubric_type }}</p>
+                        <p>PBL Level: {{ rubric.pbl_lvl }}</p>
+                        <br>
+                        <a href="">
+                            <button>Edit</button>
+                        </a>
+                        <a href="">
+                            <button>Delete</button>
+                        </a>
+                    </div>
+                    
+                {% endfor %}
+            {% endif %}
+        </div>
 
+        <script>
+
+            var rubric_type = document.getElementById('hidden_type').value
+            if (rubric_type == 'Individual') {
+                console.log('CHECK MO INDIVIDUAL')
+                document.getElementById('individual').checked = true;
+                document.getElementById('category').disabled = true;
+                document.getElementById('pbl1').disabled = true;
+                document.getElementById('pbl2').disabled = true;
+                document.getElementById('pbl3').disabled = true;
+                document.getElementById('pbl4').disabled = true;
+            } else {
+                document.getElementById('group').checked = true;
+            }
+
+            function check() {
+                const rbs = document.querySelectorAll('input[name="rubType"]');
+                let selectedValue;
+                for (const rb of rbs) {
+                    if (rb.checked) {
+                        selectedValue = rb.value;
+                        break;
+                    }
+                }
+                if (selectedValue == 'Individual') {
+                    document.getElementById('category').disabled = true;
+                    document.getElementById('pbl1').disabled = true;
+                    document.getElementById('pbl2').disabled = true;
+                    document.getElementById('pbl3').disabled = true;
+                    document.getElementById('pbl4').disabled = true;
+                } else {
+                    document.getElementById('category').disabled = false;
+                    document.getElementById('pbl1').disabled = false;
+                    document.getElementById('pbl2').disabled = false;
+                    document.getElementById('pbl3').disabled = false;
+                    document.getElementById('pbl4').disabled = false;
+                }
+            }
+        </script>
+    </body>
+    
 {% endblock %}
