--- a/website/templates/admin/new_sheet.html
+++ b/website/templates/admin/new_sheet.html
@@ -1,13 +1,195 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+
 {% block content %}
     <div class='create_button'>
         <a href="">
             <button>Create New Gradesheet Template</button>
         </a>
     </div>
+    <style>
+       .MultiCheckBox {
+           background-color: white;
+            border:1px solid #e2e2e2;
+            padding: 5px;
+            border-radius:4px;
+            cursor:pointer;
+        }
+
+        .MultiCheckBox .k-icon{ 
+            font-size: 15px;
+            float: right;
+            font-weight: bolder;
+            margin-top: -1px;
+            height: 10px;
+            width: 14px;
+            color:#787878;
+        } 
+
+        .MultiCheckBoxDetail {
+            display:none;
+            position:absolute;
+            border:1px solid #e2e2e2;
+            overflow-y:hidden;
+        }
+
+        .MultiCheckBoxDetailBody {
+            background-color: pink;
+            overflow-y:scroll;
+        }
+
+        .MultiCheckBoxDetail .cont  {
+            clear:both;
+            overflow: hidden;
+            padding: 2px;
+        }
+
+        .MultiCheckBoxDetail .cont:hover  {
+            background-color:#cfcfcf;
+        }
+
+        .MultiCheckBoxDetailBody > div > div {
+            float:left;
+        }
+
+        .MultiCheckBoxDetail>div>div:nth-child(1) {
+        
+        }
+
+        .MultiCheckBoxDetailHeader {
+            overflow:hidden;
+            position:relative;
+            height: 40px;
+            background-color:#3d3d3d;
+        }
+
+        .MultiCheckBoxDetailHeader>input {
+            position: absolute;
+            top: 15px;
+            left: 3px;
+        }
+
+        .MultiCheckBoxDetailHeader>div {
+            position: absolute;
+            top: 5px;
+            left: 24px;
+            color:#fff;
+        }
+
+        .mulinput {
+            position: relative;
+            top: 12px;
+            margin-right: 9px;
+        }
+        
+
+    </style>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
+    <script>
+        var arr = [];
+        $(document).ready(function () {
+            $(document).on("click", ".MultiCheckBox", function () {
+                var detail = $(this).next();
+                detail.show();
+            });
+
+            $(document).on("click", ".MultiCheckBoxDetailHeader input", function (e) {
+                e.stopPropagation();
+                var hc = $(this).prop("checked");
+                $(this).closest(".MultiCheckBoxDetail").find(".MultiCheckBoxDetailBody input").prop("checked", hc);
+                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
+            });
+
+            $(document).on("click", ".MultiCheckBoxDetailHeader", function (e) {
+                var inp = $(this).find("input");
+                var chk = inp.prop("checked");
+                inp.prop("checked", !chk);
+                $(this).closest(".MultiCheckBoxDetail").find(".MultiCheckBoxDetailBody input").prop("checked", !chk);
+                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
+            });
+
+            $(document).on("click", ".MultiCheckBoxDetail .cont input", function (e) {
+                e.stopPropagation();
+                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
+
+                var val = ($(".MultiCheckBoxDetailBody input:checked").length == $(".MultiCheckBoxDetailBody input").length)
+                $(".MultiCheckBoxDetailHeader input").prop("checked", val);
+            });
+
+            $(document).on("click", ".MultiCheckBoxDetail .cont", function (e) {
+                var inp = $(this).find("input");
+                var chk = inp.prop("checked");
+                inp.prop("checked", !chk);
+
+                var multiCheckBoxDetail = $(this).closest(".MultiCheckBoxDetail");
+                var multiCheckBoxDetailBody = $(this).closest(".MultiCheckBoxDetailBody");
+                multiCheckBoxDetail.next().UpdateSelect();
+
+                var val = ($(".MultiCheckBoxDetailBody input:checked").length == $(".MultiCheckBoxDetailBody input").length)
+                $(".MultiCheckBoxDetailHeader input").prop("checked", val);
+            });
+
+            $(document).mouseup(function (e) {
+                var container = $(".MultiCheckBoxDetail");
+                if (!container.is(e.target) && container.has(e.target).length === 0) {
+                    container.hide();
+                }
+            });
+        });
+
+        var defaultMultiCheckBoxOption = { width: '220px', defaultText: 'Select Below', height: '200px' };
+
+        jQuery.fn.extend({
+            CreateMultiCheckBox: function (options) {
+
+                var localOption = {};
+                localOption.width = (options != null && options.width != null && options.width != undefined) ? options.width : defaultMultiCheckBoxOption.width;
+                localOption.defaultText = (options != null && options.defaultText != null && options.defaultText != undefined) ? options.defaultText : defaultMultiCheckBoxOption.defaultText;
+                localOption.height = (options != null && options.height != null && options.height != undefined) ? options.height : defaultMultiCheckBoxOption.height;
+
+                this.hide();
+                this.attr("multiple", "multiple");
+                var divSel = $("<div class='MultiCheckBox'>" + localOption.defaultText + "<span class='k-icon k-i-arrow-60-down'><svg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512' class='svg-inline--fa fa-sort-down fa-w-10 fa-2x'><path fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z' class=''></path></svg></span></div>").insertBefore(this);
+                divSel.css({ "width": localOption.width });
+
+                var detail = $("<div class='MultiCheckBoxDetail'><div class='MultiCheckBoxDetailHeader'><input type='checkbox' class='mulinput' value='-1982' /><div>Select All</div></div><div class='MultiCheckBoxDetailBody'></div></div>").insertAfter(divSel);
+                detail.css({ "width": parseInt(options.width) + 10, "max-height": localOption.height });
+                var multiCheckBoxDetailBody = detail.find(".MultiCheckBoxDetailBody");
+
+                this.find("option").each(function () {
+                    var val = $(this).attr("value");
+
+                    if (val == undefined)
+                        val = '';
+
+                    multiCheckBoxDetailBody.append("<div class='cont'><div><input type='checkbox' class='mulinput' value='" + val + "' /></div><div>" + $(this).text() + "</div></div>");
+                });
+
+                multiCheckBoxDetailBody.css("max-height", (parseInt($(".MultiCheckBoxDetail").css("max-height")) - 28) + "px");
+            },
+            UpdateSelect: function () {
+                arr = [];
+
+                this.prev().find(".mulinput:checked").each(function () {
+                    arr.push($(this).val());
+                });
+
+                this.val(arr);
+                console.log(arr);
+            },
+        });
+
+        $(document).ready(function () {
+            $("#test").CreateMultiCheckBox({ width: '500px', defaultText : 'Select Below', height:'240px' });
+        });
 
 
+        function putHere() {
+            document.getElementById('invis').value = arr;
+        }
+
+    </script>
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
@@ -29,22 +211,15 @@
                         <option value='Group'>Group</option>
                     </select>
                     <br>
-                    
+                    <label>Select Rubric(s) Below</label>
+                    <select id="test">
+                        {% for rubric in rubrics %}
+                            <option value="{{ rubric.id }}">{{ rubric.desc }} (x{{ rubric.weight }})</option>
+                        {% endfor %}
+                    </select>
+                    <input type='hidden' id='invis' name='invis' onclick='putHere();'>
 
-                    {% for x in range(1, 6) %}
-                        <label for="rubric{{ x }}">Rubric {{ x }}:</label>
-                        <select name='rubric{{ x }}' id='rubric{{ x }}'>
-                            {% if rubrics %}
-                                    <option value='noValue'>------------</option>
-                                {% for rubric in rubrics %}
-                                    <option value="{{ rubric.id }}">{{ rubric.desc }} (x{{ rubric.weight }})</option>
-                                {% endfor %}
-                            {% endif %}
-                        </select>
-                        <br>
-                    {% endfor %}
-
-                    <button type='submit' id='submit' name='submit'>Submit</button>
+                    <button type='submit' id='submit' name='submit' onclick='putHere();'>Submit</button>
                 </form>
                 
             </div>
@@ -83,7 +258,5 @@
             $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
             });
         });
-
-		
     </script>
 {% endblock %}
