--- a/website/templates/admin/rubrics.html
+++ b/website/templates/admin/rubrics.html
@@ -22,6 +22,7 @@
                     <p>Weight: x{{ rubric.weight }}</p>
                     <p>Rubric Type: {{ rubric.rubric_type }}</p>
                     <p>PBL Level: {{ rubric.pbl_lvl }}</p>
+                    <p>Category: {{ rubric.category }}</p>
                     <br>
                     <a href="/edit_rubric/{{ rubric.id }}">
                         <button>Edit</button>
