--- a/website/templates/admin/edit_rubric.html
+++ b/website/templates/admin/edit_rubric.html
@@ -21,7 +21,7 @@
         }
     </style>
 
-    <bod onload='check()' id='bodybody'>
+    <body onload='check()' id='bodybody'>
         <div id="overlay">
             <div id="text">
                 
