--- a/website/templates/admin/gradesheet/individual.html
+++ b/website/templates/admin/gradesheet/individual.html
@@ -15,9 +15,11 @@
 		{% set x = 0 %}
 		<form method='POST'>
 			<div class="parent">
-				<div class="div23 empty_spc"> 
+				<div class="div23 empty_spc">
+					<form method='POST'>
+						<button type='submit' class="back_but" id="button_inp" name="button_inp" value='back'>BACK</button>
+					</form>
 					<a href='/gradesheets/'>
-						<input type='button' class="back_but" id="button_inp" name="button_inp" value='BACK'></button>
 					</a>
 				</div>
 				<div class="div23two empty_spc right_align"> 
