--- a/website/templates/admin/gradesheet.html
+++ b/website/templates/admin/gradesheet.html
@@ -19,7 +19,7 @@
                         <button>View</button>
                     </a>
 
-                    <a href="">
+                    <a href="/edit_sheet/{{ template.id }}">
                         <button>Edit</button>
                     </a>
                     <a href="">
