--- a/website/templates/admin/gradesheet/view_sheet.html
+++ b/website/templates/admin/gradesheet/view_sheet.html
@@ -5,20 +5,26 @@
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
 	</head>
+	<style>
+		.temp_id {
+			padding-right: 10px;
+		}
+
+	</style>
 	<body>
 		{% set x = 0 %}
 		<form method='POST'>
 			<div class="parent">
-				<div class="div23 empty_spc"> 
-					<form method='POST'>
-						<button type="submit" class="back_but" id="button_inp" name="button_inp">BACK</button>
+				<div class="div23 empty_spc">
+					<a href='/gradesheets/'>
+						<input type='button' class="back_but" id="button_inp" name="button_inp" value='Back'></button>
 					</form>
+					</a>
 				</div>
 				<div class="div23two empty_spc right_align"> 
-					Template ID: blank
+					<p class='temp_id'>Template ID: {{ template.id }}</p>
 				</div>
 				<div class="div1"> 
-					<p style="text-align: left; padding-left: 10px;">{{ current_id }}</p>
 					<h1>FEU ALABANG</h1>
 				</div>
 				<div class="div2 green_bg"> 
@@ -88,165 +94,87 @@
 				</div>
 				<div class = "div36">
 					<table>
-						<th rowspan="2" class = "one_rad_sd">
-							CRITERIA AND WEIGHT
-						</th>
-						<th>
-							5
-						</th>
-						<th>
-							4
-						</th>
-						<th>
-							3
-						</th>
-						<th>
-							2
-						</th>
-						<th>
-							1
-						</th>
-						<th colspan="4" rowspan="2" class="yellow_bg two_rad_sd">
-							STUDENT <br> INDIVIDUAL <br> GRADE
-						</th>
+						<th rowspan="2" class = "one_rad_sd">CRITERIA AND WEIGHT</th>
+						<th>5</th>
+						<th>4</th>
+						<th>3</th>
+						<th>2</th>
+						<th>1</th>
+						<th colspan="4" rowspan="2" class="yellow_bg two_rad_sd">STUDENT <br> INDIVIDUAL <br> GRADE</th>
 						<tr>
-						<th>
-							VERY ACCEPTABLE
-						</th>
-						<th>
-							ACCEPTABLE
-						</th>
-						<th>
-							FAIR
-						</th>
-						<th>
-							NEEDS IMPROVEMENT
-						</th>
-						<th>
-							POOR
-						</th>
-						<tr>
-						<td class = "tb_title">
-							{{ rubrics[x].desc }}
-							<br>
-							(x{{ rubrics[x].weight }})
-						</td>
-						<td class = "tb_desc">
-							{{ rubrics[x].rate5 }}
-						</td>
-						<td class = "tb_desc">
-							{{ rubrics[x].rate4 }}
-						</td>
-						<td class = "tb_desc">
-							{{ rubrics[x].rate3 }}
-						</td>
-						<td class = "tb_desc">
-							{{ rubrics[x].rate2 }}
-						</td>
-						<td class = "tb_desc">
-							{{ rubrics[x].rate1 }}
-						</td>
-						<td>
-							1 <br> <br>
-							<select name="score" id="score">
-								<option value="five">5</option>
-								<option value="four">4</option>
-								<option value="three">3</option>
-								<option value="two">2</option>
-								<option value="One">1</option>
-							</select>
-						</td>
-						<td>
-							2 <br> <br>
-							<select name="score" id="score">
-								<option value="five">5</option>
-								<option value="four">4</option>
-								<option value="three">3</option>
-								<option value="two">2</option>
-								<option value="One">1</option>
-							</select>
-						</td>
-						<td>
-							3 <br> <br>
-							<select name="score" id="score">
-								<option value="five">5</option>
-								<option value="four">4</option>
-								<option value="three">3</option>
-								<option value="two">2</option>
-								<option value="One">1</option>
-							</select>
-						</td>
-						<td>
-							4 <br> <br>
-							<select name="score" id="score">
-								<option value="five">5</option>
-								<option value="four">4</option>
-								<option value="three">3</option>
-								<option value="two">2</option>
-								<option value="One">1</option>
-							</select>
-						</td>
-						<tr>
-
+							<th>VERY ACCEPTABLE</th>
+							<th>ACCEPTABLE</th>
+							<th>FAIR</th>
+							<th>NEEDS IMPROVEMENT</th>
+							<th>POOR</th>
+						</tr>
+						{% for rubric in rubrics %}
+							<tr>
+								<td class = "tb_title">
+									{{ rubric.desc }}
+									<br>
+									(x{{ rubric.weight }})
+								</td>
+								<td class = "tb_desc">
+									{{ rubric.rate5 }}
+								</td>
+								<td class = "tb_desc">
+									{{ rubric.rate4 }}
+								</td>
+								<td class = "tb_desc">
+									{{ rubric.rate3 }}
+								</td>
+								<td class = "tb_desc">
+									{{ rubric.rate2 }}
+								</td>
+								<td class = "tb_desc">
+									{{ rubric.rate1 }}
+								</td>
+								{% for x in range(1, 5) %}
+									<td>
+										{{ x }} <br> <br>
+										<select name="score" id="score">
+											<option value="five">5</option>
+											<option value="four">4</option>
+											<option value="three">3</option>
+											<option value="two">2</option>
+											<option value="One">1</option>
+										</select>
+									</td>
+								{% endfor %}
+							
+							</tr>
+						{% endfor %}	
 					</table>
 					<table>
-						<td class = "tb_title">
-							&nbsp;
-						</td>
-						<td class = "tb_desc">
-							&nbsp;
-						</td>
-						<td class = "tb_desc">
-							&nbsp;
-						</td>
-						<td class = "tb_desc">
-							&nbsp;
-						</td>
-						<td class = "tb_desc">
-							&nbsp;
-						</td>
-						<td class="tb_desc four_rad_sd green_bg empty_spc">
-							TOTAL
-						</td>
-						<td class="yellow_bg empty_spc">
-						0
-						</td>
-
-						<td class="yellow_bg empty_spc">
-						0
-						</td>
-						<td class="yellow_bg empty_spc">
-						0
-						</td>
-						<td class="three_rad_sd yellow_bg empty_spc">
-						0
-						</td>
-					</table>
+						<td class = "tb_title">&nbsp;</td>
+						{% for _ in range(4) %}
+							<td class = "tb_desc">&nbsp;</td>
+						{% endfor %}						
+						<td class="tb_desc four_rad_sd green_bg empty_spc">TOTAL</td>
+						{% for _ in range(3) %}
+							<td class="yellow_bg empty_spc">0</td>
+						{% endfor %}						
+						<td class="three_rad_sd yellow_bg empty_spc">0</td>
+						</table>
 				</div>
 				<div class="div116 drkr_grn"> 
-					<form method='POST'>
-						<button type="submit" class="but" id="button_inp" name="button_inp">SUBMIT</button>
-					</form>		
+					<button type="submit" class="but" id="button_inp" name="button_inp" disabled>SUBMIT</button>
 				</div>
 			</div>
 		</form>
-	
-
-	<script>
-        $(document).ready(function(){
-            $('select').on('change', function(event ) {
-                var prevValue = $(this).data('previous');
-            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
-                var value = $(this).val();
-            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
-            });
-        });
-
-		
-    </script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		<script>
+			$(document).ready(function(){
+				$('select').on('change', function(event ) {
+					var prevValue = $(this).data('previous');
+				$('select').not(this).find('option[value="'+prevValue+'"]').show();    
+					var value = $(this).val();
+				$(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+				});
+			});
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 
 
