--- a/website/templates/admin/panelist.html
+++ b/website/templates/admin/panelist.html
@@ -3,8 +3,13 @@
 {% block content %}
     <div class='create_button'>
         <a href="/new_panel/">
-            <button onclick="on(); createTable()" >Create New Panelist</button>
+            <button onclick="on(); createTable()">Create New Panelist</button>
         </a>
+
+        <form method='POST'>
+            <input type='text' placeholder='Search'>
+            <button type='submit' id='search' name='search' value='search'>Search</submit>
+        </form>
     </div>
 
     <div class='display_grid'>
@@ -15,10 +20,14 @@
                     <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
                     <p>School: {{ panel.school }}</p>
                     <p>Defenses:</p>
+                    
                     {% if panel.defenses %} 
-                        {% for defense in panel.defenses %}
-                            <p>    - {{ defense.group.name }} - {{ defense.start_date }}</p>
-                        {% endfor %}
+                        <ul>
+                            {% for defense in panel.defenses %}
+                                <li>{{ defense.group.name }} - {{ defense.start_date }}</li>
+                            {% endfor %}
+                        </ul>
+                        
                     {% else %}
                         <p>NOTHING SCHEDULED</p>
                     {% endif %}
