--- a/website/templates/admin/student.html
+++ b/website/templates/admin/student.html
@@ -8,9 +8,7 @@
                 <div class='box'>
                     <p>ID: {{ student.stud_no }}</p>
                     <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                    <p>Group: {{ student.group_id }}</p>
-                    <p>Group Name: {{ student.group.name }}</p>
-                    <br>
+                    <p>Group: {{ student.group_id }} - {{ student.group.name }}</p>
                     <a href="/edit_student/{{ student.stud_no }}">
                         <button>Edit</button>
                     </a>
@@ -22,9 +20,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-
-    
-    <script>
-    </script>
 {% endblock %}
